<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:settingsActivity="com.example.flutterboard.MainActivity">

    <!-- English US -->
    <subtype
        android:label="@string/english"
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true"
        android:isDefault="true" />

    <!-- English UK -->
    <subtype
        android:label="English (UK)"
        android:imeSubtypeLocale="en_GB"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />

    <!-- Hindi -->
    <subtype
        android:label="@string/hindi"
        android:imeSubtypeLocale="hi_IN"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />

    <!-- Gujarati -->
    <subtype
        android:label="@string/gujarati"
        android:imeSubtypeLocale="gu_IN"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />

    <!-- Spanish -->
    <subtype
        android:label="@string/spanish"
        android:imeSubtypeLocale="es_ES"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />

    <!-- French -->
    <subtype
        android:label="@string/french"
        android:imeSubtypeLocale="fr_FR"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />

    <!-- German -->
    <subtype
        android:label="@string/german"
        android:imeSubtypeLocale="de_DE"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />

    <!-- Italian -->
    <subtype
        android:label="@string/italian"
        android:imeSubtypeLocale="it_IT"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />

    <!-- Portuguese -->
    <subtype
        android:label="@string/portuguese"
        android:imeSubtypeLocale="pt_BR"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />

    <!-- Russian -->
    <subtype
        android:label="@string/russian"
        android:imeSubtypeLocale="ru_RU"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />

    <!-- Chinese Simplified -->
    <subtype
        android:label="Chinese (Simplified)"
        android:imeSubtypeLocale="zh_CN"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />

    <!-- Chinese Traditional -->
    <subtype
        android:label="Chinese (Traditional)"
        android:imeSubtypeLocale="zh_TW"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />

    <!-- Japanese -->
    <subtype
        android:label="@string/japanese"
        android:imeSubtypeLocale="ja_JP"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />

    <!-- Korean -->
    <subtype
        android:label="@string/korean"
        android:imeSubtypeLocale="ko_KR"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />

</input-method>
